# human_like_nao

./: .gitignore  README.md  docker-compose.yml  game.py  gc_tts.py  handler.py  llm.py  main.py  mappings.py  pyproject.toml
choregraphe/: choregraphe.pml  client.py  decoder.py  manifest.xml
choregraphe/behavior_1/: behavior.xar
